added another example of non-responsive design

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@ You hate me; you want to kill me! Well, go on! Kill me! KILL ME!</p>
   </section>
   <section id="contact">
     <h1>Contact Us</h1>
-    <p>You've swallowed a planet! Heh-haa! Super squeaky bum time! You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better? Father Christmas. Santa Claus. Or as I've always known him: Jeff.<p>
+    <p>You've swallowed a planet! Heh-haa! Super squeaky bum time! You know when grown-ups tell you 'everything's going to be fine' and you think they're probably lying to make you feel better? Father Christmas. Santa Claus. Or as I've always known him: Jeff.</p>
+    <div class="button-container">
+      <a class="button" href="#">Button</a>
+      <a class="button" href="#">Button</a>
+      <a class="button" href="#">Button</a>
+      <a class="button" href="#">Button</a>
+      <a class="button" href="#">Button</a>
+      <a class="button" href="#">Button</a>
+    </div>
   </section>
   <footer>
     <!-- site-wide footer -->
