adding the burger menu icon and hiding the nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+  <i class="fa fa-bars burger-menu" aria-hidden="true"></i>
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
